[project]
name = "rgthree-comfy"
description = "Making ComfyUI more comfortable."
version = "1.0.0"
license = { file = "LICENSE" }
dynamic = [ "dependencies" ]

[project.urls]
Repository = "https://github.com/rgthree/rgthree-comfy"

[tool.comfy]
PublisherId = "rgthree"
DisplayName = "rgthree-comfy"
Icon = "https://comfy.rgthree.com/media/rgthree.svg"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [ 
    "rgthree_comfy",
    "rgthree_comfy.py",
    "rgthree_comfy.py.server",
]


[tool.setuptools.package-dir]
"rgthree_comfy" = "."
"rgthree_comfy.py" = "py"
"rgthree_comfy.py.server" = "py/server"

[tool.setuptools.package-data]
"*" = ["**/*.js", "**/*.ts", "**/*.json", "**/*.png", "**/*.html"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.entry-points."comfyui.custom_nodes"]
rgthree_comfy = "rgthree_comfy"